Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -615,7 +615,8 @@
       "\tEpoch: 57\tTrain loss: 0.037\tTrain Acc: 98.85225\n",
       "\tEpoch: 57\tTest loss: 1.706\tTest Acc: 78.895255\n",
       "==========================\n",
-      "Epoch: 58 i : 334 and loss: 0.093 acc: 0.9687555\r"
+      "\tEpoch: 58\tTrain loss: 0.042\tTrain Acc: 98.68655\n",
+      "Epoch: 58 i : 57 and loss: 1.77 acc: 0.79687555\r"
      ]
     }
    ],
