Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -616,7 +616,9 @@
       "\tEpoch: 57\tTest loss: 1.706\tTest Acc: 78.895255\n",
       "==========================\n",
       "\tEpoch: 58\tTrain loss: 0.042\tTrain Acc: 98.68655\n",
-      "Epoch: 58 i : 57 and loss: 1.77 acc: 0.79687555\r"
+      "\tEpoch: 58\tTest loss: 1.675\tTest Acc: 78.975375\n",
+      "==========================\n",
+      "Epoch: 59 i : 66 and loss: 0.035 acc: 0.9921875\r"
      ]
     }
    ],
