Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -618,7 +618,8 @@
       "\tEpoch: 58\tTrain loss: 0.042\tTrain Acc: 98.68655\n",
       "\tEpoch: 58\tTest loss: 1.675\tTest Acc: 78.975375\n",
       "==========================\n",
-      "Epoch: 59 i : 336 and loss: 0.026 acc: 0.9921875\r"
+      "\tEpoch: 59\tTrain loss: 0.036\tTrain Acc: 98.86455\n",
+      "Epoch: 59 i : 62 and loss: 2.375 acc: 0.7512525\r"
      ]
     }
    ],
