Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -619,7 +619,9 @@
       "\tEpoch: 58\tTest loss: 1.675\tTest Acc: 78.975375\n",
       "==========================\n",
       "\tEpoch: 59\tTrain loss: 0.036\tTrain Acc: 98.86455\n",
-      "Epoch: 59 i : 62 and loss: 2.375 acc: 0.7512525\r"
+      "\tEpoch: 59\tTest loss: 1.605\tTest Acc: 79.595755\n",
+      "==========================\n",
+      "Epoch: 60 i : 69 and loss: 0.066 acc: 0.9921875\r"
      ]
     }
    ],
