Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -621,7 +621,8 @@
       "\tEpoch: 59\tTrain loss: 0.036\tTrain Acc: 98.86455\n",
       "\tEpoch: 59\tTest loss: 1.605\tTest Acc: 79.595755\n",
       "==========================\n",
-      "Epoch: 60 i : 338 and loss: 0.002 acc: 1.0921875\r"
+      "\tEpoch: 60\tTrain loss: 0.028\tTrain Acc: 99.07875\n",
+      "Epoch: 60 i : 65 and loss: 1.566 acc: 0.8046875\r"
      ]
     }
    ],
