Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -1045,7 +1045,7 @@
     "    d_norm = d_re.norm(dim=(1),keepdim=True)[:,:,None,None]\n",
     "    \n",
     "    w_re   = w.view((w.shape[0],-1))\n",
-    "    w_norm = w_re.norm(dim=(1),keepdim=True)\n",
+    "    w_norm = w_re.norm(dim=(1),keepdim=True)[:,:,None,None]\n",
     "    break\n",
     "    "
    ]
