Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -622,7 +622,9 @@
       "\tEpoch: 59\tTest loss: 1.605\tTest Acc: 79.595755\n",
       "==========================\n",
       "\tEpoch: 60\tTrain loss: 0.028\tTrain Acc: 99.07875\n",
-      "Epoch: 60 i : 65 and loss: 1.566 acc: 0.8046875\r"
+      "\tEpoch: 60\tTest loss: 1.699\tTest Acc: 78.272575\n",
+      "==========================\n",
+      "Epoch: 61 i : 70 and loss: 0.026 acc: 0.9921875\r"
      ]
     }
    ],
