--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -624,7 +624,8 @@
       "\tEpoch: 60\tTrain loss: 0.028\tTrain Acc: 99.07875\n",
       "\tEpoch: 60\tTest loss: 1.699\tTest Acc: 78.272575\n",
       "==========================\n",
-      "Epoch: 61 i : 332 and loss: 0.036 acc: 0.9921875\r"
+      "\tEpoch: 61\tTrain loss: 0.031\tTrain Acc: 98.99275\n",
+      "Epoch: 61 i : 46 and loss: 2.168 acc: 0.7187525\r"
      ]
     }
    ],
