Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -625,7 +625,9 @@
       "\tEpoch: 60\tTest loss: 1.699\tTest Acc: 78.272575\n",
       "==========================\n",
       "\tEpoch: 61\tTrain loss: 0.031\tTrain Acc: 98.99275\n",
-      "Epoch: 61 i : 46 and loss: 2.168 acc: 0.7187525\r"
+      "\tEpoch: 61\tTest loss: 1.763\tTest Acc: 77.984375\n",
+      "==========================\n",
+      "Epoch: 62 i : 58 and loss: 0.044 acc: 0.9843755\r"
      ]
     }
    ],
