Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -1036,12 +1036,14 @@
    },
    "outputs": [],
    "source": [
+    "temp = []\n",
     "for d,w in zip(random_direction2,copy_of_the_weights):\n",
     "    d_re   = d.view((d.shape[0],-1))\n",
     "    d_norm = d_re.norm(dim=(1),keepdim=True)[:,:,None,None]\n",
     "    \n",
     "    w_re   = w.view((w.shape[0],-1))\n",
     "    w_norm = w_re.norm(dim=(1),keepdim=True)[:,:,None,None]\n",
+    "    tempa.append(d.cuda() * (w_norm.cuda()/(d_norm.cuda()+1e-10)))\n",
     "    d      =  d.cuda() * (w_norm.cuda()/(d_norm.cuda()+1e-10))"
    ]
   },
