Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -627,7 +627,8 @@
       "\tEpoch: 61\tTrain loss: 0.031\tTrain Acc: 98.99275\n",
       "\tEpoch: 61\tTest loss: 1.763\tTest Acc: 77.984375\n",
       "==========================\n",
-      "Epoch: 62 i : 325 and loss: 0.011 acc: 0.9921875\r"
+      "\tEpoch: 62\tTrain loss: 0.029\tTrain Acc: 99.05455\n",
+      "Epoch: 62 i : 32 and loss: 1.902 acc: 0.8125555\r"
      ]
     }
    ],
