Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -1012,10 +1012,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 170,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-03T23:41:35.643Z"
+     "end_time": "2019-05-03T23:41:59.913192Z",
+     "start_time": "2019-05-03T23:41:51.173413Z"
     }
    },
    "outputs": [],
@@ -1026,10 +1027,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 171,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-03T23:41:35.872Z"
+     "end_time": "2019-05-03T23:42:15.977946Z",
+     "start_time": "2019-05-03T23:42:15.835251Z"
     }
    },
    "outputs": [],
@@ -1042,18 +1044,44 @@
     "    w_re   = w.view((w.shape[0],-1))\n",
     "    w_norm = w_re.norm(dim=(1),keepdim=True)[:,:,None,None]\n",
     "    temp.append(d.cuda() * (w_norm.cuda()/(d_norm.cuda()+1e-10)))\n",
-    "    d      =  d.cuda() * (w_norm.cuda()/(d_norm.cuda()+1e-10))"
+    "    d.data      =  d.cuda() * (w_norm.cuda()/(d_norm.cuda()+1e-10))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 172,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-03T23:41:36.213Z"
+     "end_time": "2019-05-03T23:42:24.005588Z",
+     "start_time": "2019-05-03T23:42:23.933781Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "for x, xx in zip(random_direction1,random_direction2):\n",
     "    print(np.allclose(x.cpu().numpy(),xx.cpu().numpy()))\n",
