Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -1027,11 +1027,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 173,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-03T23:42:15.977946Z",
-     "start_time": "2019-05-03T23:42:15.835251Z"
+     "end_time": "2019-05-03T23:42:43.576842Z",
+     "start_time": "2019-05-03T23:42:43.551576Z"
     }
    },
    "outputs": [],
@@ -1049,11 +1049,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 174,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-03T23:42:24.005588Z",
-     "start_time": "2019-05-03T23:42:23.933781Z"
+     "end_time": "2019-05-03T23:42:56.528327Z",
+     "start_time": "2019-05-03T23:42:56.454943Z"
     }
    },
    "outputs": [
@@ -1061,15 +1061,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
       "True\n",
       "True\n",
       "True\n",
