--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -628,7 +628,9 @@
       "\tEpoch: 61\tTest loss: 1.763\tTest Acc: 77.984375\n",
       "==========================\n",
       "\tEpoch: 62\tTrain loss: 0.029\tTrain Acc: 99.05455\n",
-      "Epoch: 62 i : 32 and loss: 1.902 acc: 0.8125555\r"
+      "\tEpoch: 62\tTest loss: 1.691\tTest Acc: 79.036255\n",
+      "==========================\n",
+      "Epoch: 63 i : 51 and loss: 0.004 acc: 1.0921875\r"
      ]
     }
    ],
