Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -630,7 +630,8 @@
       "\tEpoch: 62\tTrain loss: 0.029\tTrain Acc: 99.05455\n",
       "\tEpoch: 62\tTest loss: 1.691\tTest Acc: 79.036255\n",
       "==========================\n",
-      "Epoch: 63 i : 315 and loss: 0.023 acc: 0.9921875\r"
+      "\tEpoch: 63\tTrain loss: 0.035\tTrain Acc: 98.95875\n",
+      "Epoch: 63 i : 16 and loss: 2.092 acc: 0.7656255\r"
      ]
     }
    ],
