Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -631,7 +631,9 @@
       "\tEpoch: 62\tTest loss: 1.691\tTest Acc: 79.036255\n",
       "==========================\n",
       "\tEpoch: 63\tTrain loss: 0.035\tTrain Acc: 98.95875\n",
-      "Epoch: 63 i : 16 and loss: 2.092 acc: 0.7656255\r"
+      "\tEpoch: 63\tTest loss: 1.841\tTest Acc: 77.773125\n",
+      "==========================\n",
+      "Epoch: 64 i : 44 and loss: 0.058 acc: 0.9921875\r"
      ]
     }
    ],
