Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -1144,7 +1144,7 @@
     "    w_re   = w.view((w.shape[0],-1))\n",
     "    w_norm = w_re.norm(dim=(1),keepdim=True)[:,:,None,None]\n",
     "    \n",
-    "    d_re1   = d1.view((d1.shape[0],-1))\n",
+    "    d_norm1   = d1.view((d1.shape[0],-1))norm(dim=(1),keepdim=True)[:,:,None,None]\n",
     "    d_norm1 = d_re1.norm(dim=(1),keepdim=True)[:,:,None,None]\n",
     "    \n",
     "    d_re2   = d2.view((d2.shape[0],-1))\n",
