Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -633,7 +633,7 @@
       "\tEpoch: 63\tTrain loss: 0.035\tTrain Acc: 98.95875\n",
       "\tEpoch: 63\tTest loss: 1.841\tTest Acc: 77.773125\n",
       "==========================\n",
-      "Epoch: 64 i : 308 and loss: 0.066 acc: 0.9765625\r"
+      "\tEpoch: 64\tTrain loss: 0.027\tTrain Acc: 99.09655\n"
      ]
     }
    ],
