--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -633,7 +633,10 @@
       "\tEpoch: 63\tTrain loss: 0.035\tTrain Acc: 98.95875\n",
       "\tEpoch: 63\tTest loss: 1.841\tTest Acc: 77.773125\n",
       "==========================\n",
-      "\tEpoch: 64\tTrain loss: 0.027\tTrain Acc: 99.09655\n"
+      "\tEpoch: 64\tTrain loss: 0.027\tTrain Acc: 99.09655\n",
+      "\tEpoch: 64\tTest loss: 1.78\tTest Acc: 79.2756255\n",
+      "==========================\n",
+      "Epoch: 65 i : 29 and loss: 0.002 acc: 1.0875625\r"
      ]
     }
    ],
