--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -1197,7 +1197,15 @@
       "count: 8\tCoord: [-0.2 -1. ]\t\tAcc: 21.519886363636363\tLoss: 30.208\n",
       "count: 10\tCoord: [ 0. -1.]\t\tAcc: 24.857954545454547\tLoss: 22.791\n",
       "count: 12\tCoord: [ 0.2 -1. ]\t\tAcc: 25.0\tLoss: 22.822\n",
-      "count: 14\tCoord: [ 0.4 -1. ]\t\tAcc: 19.81534090909091\tLoss: 32.572\n"
+      "count: 14\tCoord: [ 0.4 -1. ]\t\tAcc: 19.81534090909091\tLoss: 32.572\n",
+      "count: 16\tCoord: [ 0.6 -1. ]\t\tAcc: 16.619318181818183\tLoss: 58.249\n",
+      "count: 18\tCoord: [ 0.8 -1. ]\t\tAcc: 13.565340909090908\tLoss: 104.984\n",
+      "count: 20\tCoord: [ 1. -1.]\t\tAcc: 12.357954545454545\tLoss: 190.277\n",
+      "count: 22\tCoord: [-0.9 -0.9]\t\tAcc: 11.789772727272727\tLoss: 154.225\n",
+      "count: 24\tCoord: [-0.7 -0.9]\t\tAcc: 13.920454545454545\tLoss: 79.836\n",
+      "count: 26\tCoord: [-0.5 -0.9]\t\tAcc: 17.329545454545453\tLoss: 43.514\n",
+      "count: 28\tCoord: [-0.3 -0.9]\t\tAcc: 22.37215909090909\tLoss: 24.301\n",
+      "Coord: [-0.2 -0.9]\tAcc: 30\tLoss: 23.172\r"
      ]
     }
    ],
