Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -636,7 +636,16 @@
       "\tEpoch: 64\tTrain loss: 0.027\tTrain Acc: 99.09655\n",
       "\tEpoch: 64\tTest loss: 1.78\tTest Acc: 79.2756255\n",
       "==========================\n",
-      "Epoch: 65 i : 372 and loss: 0.085 acc: 0.9687575\r"
+      "\tEpoch: 65\tTrain loss: 0.03\tTrain Acc: 99.064875\n",
+      "\tEpoch: 65\tTest loss: 1.877\tTest Acc: 77.978125\n",
+      "==========================\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 66 i : 7 and loss: 0.013 acc: 0.9921875\r"
      ]
     }
    ],
