Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1030,61 +1030,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-03T23:53:14.897961Z",
-     "start_time": "2019-05-03T23:53:14.303806Z"
+     "end_time": "2019-05-03T23:53:45.814259Z",
+     "start_time": "2019-05-03T23:53:45.631300Z"
     },
     "code_folding": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([96, 3, 3, 3])\n",
-      "torch.Size([96])\n",
-      "torch.Size([96])\n",
-      "torch.Size([96, 96, 3, 3])\n",
-      "torch.Size([96])\n",
-      "torch.Size([96])\n",
-      "torch.Size([96, 96, 3, 3])\n",
-      "torch.Size([96])\n",
-      "torch.Size([96])\n",
-      "torch.Size([192, 96, 3, 3])\n",
-      "torch.Size([192])\n",
-      "torch.Size([192])\n",
-      "torch.Size([192, 192, 3, 3])\n",
-      "torch.Size([192])\n",
-      "torch.Size([192])\n",
-      "torch.Size([192, 192, 3, 3])\n",
-      "torch.Size([192])\n",
-      "torch.Size([192])\n",
-      "torch.Size([192, 192, 3, 3])\n",
-      "torch.Size([192])\n",
-      "torch.Size([192])\n",
-      "torch.Size([192, 192, 1, 1])\n",
-      "torch.Size([192])\n",
-      "torch.Size([192])\n",
-      "torch.Size([10, 192, 1, 1])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "random_direction1 = get_random_weights(copy_of_the_weights)\n",
     "random_direction2 = get_random_weights(copy_of_the_weights)\n",
     "\n",
     "for d1,d2,w in zip(random_direction1,random_direction2,copy_of_the_weights):\n",
     "    \n",
-    "    if w.dim\n",
-    "    print(w.shape)\n",
-    "    w_norm  = w.view((w.shape[0],-1))  .norm(dim=(1),keepdim=True)[:,:,None,None]\n",
-    "    d_norm1 = d1.view((d1.shape[0],-1)).norm(dim=(1),keepdim=True)[:,:,None,None]\n",
-    "    d_norm2 = d2.view((d2.shape[0],-1)).norm(dim=(1),keepdim=True)[:,:,None,None]\n",
-    "    \n",
-    "    d1.data = d1.cuda() * (w_norm/(d_norm1.cuda()+1e-10))\n",
-    "    d2.data = d2.cuda() * (w_norm/(d_norm2.cuda()+1e-10))"
+    "    if w.dim() == 1:\n",
+    "        d1.data = torch.zeros_like(w)\n",
+    "        d2.data = torch.zeros_like(w)\n",
+    "    else:\n",
+    "        w_norm  = w.view((w.shape[0],-1))  .norm(dim=(1),keepdim=True)[:,:,None,None]\n",
+    "        d_norm1 = d1.view((d1.shape[0],-1)).norm(dim=(1),keepdim=True)[:,:,None,None]\n",
+    "        d_norm2 = d2.view((d2.shape[0],-1)).norm(dim=(1),keepdim=True)[:,:,None,None]\n",
+    "\n",
+    "        d1.data = d1.cuda() * (w_norm/(d_norm1.cuda()+1e-10))\n",
+    "        d2.data = d2.cuda() * (w_norm/(d_norm2.cuda()+1e-10))"
    ]
   },
   {
