Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1059,6 +1059,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for d1,d2,w in zip(random_direction1,random_direction2,copy_of_the_weights):\n",
+    "    if d1.dim() == 1:\n",
+    "        print(d1.sum(),d2."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
