--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -1205,7 +1205,15 @@
       "count: 24\tCoord: [-0.7 -0.9]\t\tAcc: 13.920454545454545\tLoss: 79.836\n",
       "count: 26\tCoord: [-0.5 -0.9]\t\tAcc: 17.329545454545453\tLoss: 43.514\n",
       "count: 28\tCoord: [-0.3 -0.9]\t\tAcc: 22.37215909090909\tLoss: 24.301\n",
-      "Coord: [-0.2 -0.9]\tAcc: 30\tLoss: 23.172\r"
+      "count: 30\tCoord: [-0.1 -0.9]\t\tAcc: 30.326704545454547\tLoss: 16.299\n",
+      "count: 32\tCoord: [ 0.1 -0.9]\t\tAcc: 30.255681818181817\tLoss: 13.602\n",
+      "count: 34\tCoord: [ 0.3 -0.9]\t\tAcc: 27.911931818181817\tLoss: 15.886\n",
+      "count: 36\tCoord: [ 0.5 -0.9]\t\tAcc: 20.525568181818183\tLoss: 26.259\n",
+      "count: 38\tCoord: [ 0.7 -0.9]\t\tAcc: 16.619318181818183\tLoss: 49.77\n",
+      "count: 40\tCoord: [ 0.9 -0.9]\t\tAcc: 14.0625\tLoss: 92.882\n",
+      "count: 42\tCoord: [-1.  -0.8]\t\tAcc: 13.494318181818182\tLoss: 153.716\n",
+      "count: 44\tCoord: [-0.8 -0.8]\t\tAcc: 14.204545454545455\tLoss: 76.583\n",
+      "Coord: [-0.7 -0.8]\tAcc: 18\tLoss: 57.688\r"
      ]
     }
    ],
