Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1099,7 +1099,9 @@
      "output_type": "stream",
      "text": [
       "count: 0\tCoord: [-1. -1.]\t\tAcc: 9.161931818181818\tLoss: 133.81\n",
-      "count: 2\tCoord: [-0.8 -1. ]\t\tAcc: 8.380681818181818\tLoss: 87.448\n"
+      "count: 2\tCoord: [-0.8 -1. ]\t\tAcc: 8.380681818181818\tLoss: 87.448\n",
+      "count: 4\tCoord: [-0.6 -1. ]\t\tAcc: 9.588068181818182\tLoss: 60.782\n",
+      "count: 6\tCoord: [-0.4 -1. ]\t\tAcc: 11.505681818181818\tLoss: 43.679\n"
      ]
     }
    ],
