Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1103,7 +1103,8 @@
       "count: 4\tCoord: [-0.6 -1. ]\t\tAcc: 9.588068181818182\tLoss: 60.782\n",
       "count: 6\tCoord: [-0.4 -1. ]\t\tAcc: 11.505681818181818\tLoss: 43.679\n",
       "count: 8\tCoord: [-0.2 -1. ]\t\tAcc: 14.914772727272727\tLoss: 30.647\n",
-      "Coord: [-0.1 -1. ]\tAcc: 22\tLoss: 28.523\r"
+      "count: 10\tCoord: [ 0. -1.]\t\tAcc: 17.116477272727273\tLoss: 24.978\n",
+      "count: 12\tCoord: [ 0.2 -1. ]\t\tAcc: 16.69034090909091\tLoss: 29.189\n"
      ]
     }
    ],
