--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -1213,7 +1213,14 @@
       "count: 40\tCoord: [ 0.9 -0.9]\t\tAcc: 14.0625\tLoss: 92.882\n",
       "count: 42\tCoord: [-1.  -0.8]\t\tAcc: 13.494318181818182\tLoss: 153.716\n",
       "count: 44\tCoord: [-0.8 -0.8]\t\tAcc: 14.204545454545455\tLoss: 76.583\n",
-      "Coord: [-0.7 -0.8]\tAcc: 18\tLoss: 57.688\r"
+      "count: 46\tCoord: [-0.6 -0.8]\t\tAcc: 18.394886363636363\tLoss: 40.109\n",
+      "count: 48\tCoord: [-0.4 -0.8]\t\tAcc: 25.0\tLoss: 20.917\n",
+      "count: 50\tCoord: [-0.2 -0.8]\t\tAcc: 34.51704545454545\tLoss: 12.33\n",
+      "count: 52\tCoord: [ 0.  -0.8]\t\tAcc: 39.34659090909091\tLoss: 8.935\n",
+      "count: 54\tCoord: [ 0.2 -0.8]\t\tAcc: 37.42897727272727\tLoss: 8.97\n",
+      "count: 56\tCoord: [ 0.4 -0.8]\t\tAcc: 30.75284090909091\tLoss: 12.715\n",
+      "count: 58\tCoord: [ 0.6 -0.8]\t\tAcc: 20.59659090909091\tLoss: 22.802\n",
+      "Coord: [ 0.7 -0.8]\tAcc: 19\tLoss: 32.444\r"
      ]
     }
    ],
