Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -647,7 +647,8 @@
      "text": [
       "\tEpoch: 66\tTrain loss: 0.033\tTrain Acc: 98.94825\n",
       "\tEpoch: 66\tTest loss: 1.794\tTest Acc: 78.725875\n",
-      "==========================\n"
+      "==========================\n",
+      "Epoch: 67 i : 66 and loss: 0.032 acc: 0.9921875\r"
      ]
     }
    ],
