--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1104,7 +1104,10 @@
       "count: 6\tCoord: [-0.4 -1. ]\t\tAcc: 11.505681818181818\tLoss: 43.679\n",
       "count: 8\tCoord: [-0.2 -1. ]\t\tAcc: 14.914772727272727\tLoss: 30.647\n",
       "count: 10\tCoord: [ 0. -1.]\t\tAcc: 17.116477272727273\tLoss: 24.978\n",
-      "count: 12\tCoord: [ 0.2 -1. ]\t\tAcc: 16.69034090909091\tLoss: 29.189\n"
+      "count: 12\tCoord: [ 0.2 -1. ]\t\tAcc: 16.69034090909091\tLoss: 29.189\n",
+      "count: 14\tCoord: [ 0.4 -1. ]\t\tAcc: 13.28125\tLoss: 43.408\n",
+      "count: 16\tCoord: [ 0.6 -1. ]\t\tAcc: 10.9375\tLoss: 64.335\n",
+      "count: 18\tCoord: [ 0.8 -1. ]\t\tAcc: 10.014204545454545\tLoss: 110.118\n"
      ]
     }
    ],
@@ -1159,7 +1162,7 @@
    },
    "outputs": [],
    "source": [
-    "create_viz(loss_list,acc_list)"
+    "create_viz(loss_list,acc_list)f"
    ]
   },
   {
