Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1107,7 +1107,8 @@
       "count: 12\tCoord: [ 0.2 -1. ]\t\tAcc: 16.69034090909091\tLoss: 29.189\n",
       "count: 14\tCoord: [ 0.4 -1. ]\t\tAcc: 13.28125\tLoss: 43.408\n",
       "count: 16\tCoord: [ 0.6 -1. ]\t\tAcc: 10.9375\tLoss: 64.335\n",
-      "count: 18\tCoord: [ 0.8 -1. ]\t\tAcc: 10.014204545454545\tLoss: 110.118\n"
+      "count: 18\tCoord: [ 0.8 -1. ]\t\tAcc: 10.014204545454545\tLoss: 110.118\n",
+      "count: 20\tCoord: [ 1. -1.]\t\tAcc: 9.730113636363637\tLoss: 214.987\n"
      ]
     }
    ],
@@ -1162,7 +1163,7 @@
    },
    "outputs": [],
    "source": [
-    "create_viz(loss_list,acc_list)f"
+    "create_viz(loss_list,acc_list)"
    ]
   },
   {
