--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -1220,7 +1220,11 @@
       "count: 54\tCoord: [ 0.2 -0.8]\t\tAcc: 37.42897727272727\tLoss: 8.97\n",
       "count: 56\tCoord: [ 0.4 -0.8]\t\tAcc: 30.75284090909091\tLoss: 12.715\n",
       "count: 58\tCoord: [ 0.6 -0.8]\t\tAcc: 20.59659090909091\tLoss: 22.802\n",
-      "Coord: [ 0.7 -0.8]\tAcc: 19\tLoss: 32.444\r"
+      "count: 60\tCoord: [ 0.8 -0.8]\t\tAcc: 16.69034090909091\tLoss: 45.929\n",
+      "count: 62\tCoord: [ 1.  -0.8]\t\tAcc: 14.417613636363637\tLoss: 87.34\n",
+      "count: 64\tCoord: [-0.9 -0.7]\t\tAcc: 14.559659090909092\tLoss: 78.351\n",
+      "count: 66\tCoord: [-0.7 -0.7]\t\tAcc: 18.181818181818183\tLoss: 38.95\n",
+      "count: 68\tCoord: [-0.5 -0.7]\t\tAcc: 25.78125\tLoss: 19.037\n"
      ]
     }
    ],
