Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1108,7 +1108,11 @@
       "count: 14\tCoord: [ 0.4 -1. ]\t\tAcc: 13.28125\tLoss: 43.408\n",
       "count: 16\tCoord: [ 0.6 -1. ]\t\tAcc: 10.9375\tLoss: 64.335\n",
       "count: 18\tCoord: [ 0.8 -1. ]\t\tAcc: 10.014204545454545\tLoss: 110.118\n",
-      "count: 20\tCoord: [ 1. -1.]\t\tAcc: 9.730113636363637\tLoss: 214.987\n"
+      "count: 20\tCoord: [ 1. -1.]\t\tAcc: 9.730113636363637\tLoss: 214.987\n",
+      "count: 22\tCoord: [-0.9 -0.9]\t\tAcc: 9.801136363636363\tLoss: 87.87\n",
+      "count: 24\tCoord: [-0.7 -0.9]\t\tAcc: 9.090909090909092\tLoss: 56.204\n",
+      "count: 26\tCoord: [-0.5 -0.9]\t\tAcc: 12.286931818181818\tLoss: 35.35\n",
+      "Coord: [-0.4 -0.9]\tAcc: 23\tLoss: 28.706\r"
      ]
     }
    ],
