Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1112,7 +1112,10 @@
       "count: 22\tCoord: [-0.9 -0.9]\t\tAcc: 9.801136363636363\tLoss: 87.87\n",
       "count: 24\tCoord: [-0.7 -0.9]\t\tAcc: 9.090909090909092\tLoss: 56.204\n",
       "count: 26\tCoord: [-0.5 -0.9]\t\tAcc: 12.286931818181818\tLoss: 35.35\n",
-      "Coord: [-0.4 -0.9]\tAcc: 23\tLoss: 28.706\r"
+      "count: 28\tCoord: [-0.3 -0.9]\t\tAcc: 18.110795454545453\tLoss: 23.886\n",
+      "count: 30\tCoord: [-0.1 -0.9]\t\tAcc: 23.650568181818183\tLoss: 16.594\n",
+      "count: 32\tCoord: [ 0.1 -0.9]\t\tAcc: 25.0\tLoss: 16.154\n",
+      "Coord: [ 0.2 -0.9]\tAcc: 26\tLoss: 20.157\r"
      ]
     }
    ],
