Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -648,7 +648,8 @@
       "\tEpoch: 66\tTrain loss: 0.033\tTrain Acc: 98.94825\n",
       "\tEpoch: 66\tTest loss: 1.794\tTest Acc: 78.725875\n",
       "==========================\n",
-      "Epoch: 67 i : 317 and loss: 0.059 acc: 0.9687555\r"
+      "\tEpoch: 67\tTrain loss: 0.036\tTrain Acc: 98.88755\n",
+      "Epoch: 67 i : 12 and loss: 1.433 acc: 0.7734375\r"
      ]
     }
    ],
