Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -1224,7 +1224,15 @@
       "count: 62\tCoord: [ 1.  -0.8]\t\tAcc: 14.417613636363637\tLoss: 87.34\n",
       "count: 64\tCoord: [-0.9 -0.7]\t\tAcc: 14.559659090909092\tLoss: 78.351\n",
       "count: 66\tCoord: [-0.7 -0.7]\t\tAcc: 18.181818181818183\tLoss: 38.95\n",
-      "count: 68\tCoord: [-0.5 -0.7]\t\tAcc: 25.78125\tLoss: 19.037\n"
+      "count: 68\tCoord: [-0.5 -0.7]\t\tAcc: 25.78125\tLoss: 19.037\n",
+      "count: 70\tCoord: [-0.3 -0.7]\t\tAcc: 38.13920454545455\tLoss: 9.853\n",
+      "count: 72\tCoord: [-0.1 -0.7]\t\tAcc: 48.36647727272727\tLoss: 6.221\n",
+      "count: 74\tCoord: [ 0.1 -0.7]\t\tAcc: 50.92329545454545\tLoss: 5.207\n",
+      "count: 76\tCoord: [ 0.3 -0.7]\t\tAcc: 42.68465909090909\tLoss: 6.681\n",
+      "count: 78\tCoord: [ 0.5 -0.7]\t\tAcc: 30.75284090909091\tLoss: 10.991\n",
+      "count: 80\tCoord: [ 0.7 -0.7]\t\tAcc: 19.53125\tLoss: 22.536\n",
+      "count: 82\tCoord: [ 0.9 -0.7]\t\tAcc: 15.909090909090908\tLoss: 45.155\n",
+      "count: 84\tCoord: [-1.  -0.6]\t\tAcc: 15.198863636363637\tLoss: 83.985\n"
      ]
     }
    ],
