--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1115,7 +1115,10 @@
       "count: 28\tCoord: [-0.3 -0.9]\t\tAcc: 18.110795454545453\tLoss: 23.886\n",
       "count: 30\tCoord: [-0.1 -0.9]\t\tAcc: 23.650568181818183\tLoss: 16.594\n",
       "count: 32\tCoord: [ 0.1 -0.9]\t\tAcc: 25.0\tLoss: 16.154\n",
-      "Coord: [ 0.2 -0.9]\tAcc: 26\tLoss: 20.157\r"
+      "count: 34\tCoord: [ 0.3 -0.9]\t\tAcc: 18.607954545454547\tLoss: 22.445\n",
+      "count: 36\tCoord: [ 0.5 -0.9]\t\tAcc: 13.707386363636363\tLoss: 34.031\n",
+      "count: 38\tCoord: [ 0.7 -0.9]\t\tAcc: 10.724431818181818\tLoss: 56.433\n",
+      "count: 40\tCoord: [ 0.9 -0.9]\t\tAcc: 10.014204545454545\tLoss: 106.499\n"
      ]
     }
    ],
