Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -649,7 +649,9 @@
       "\tEpoch: 66\tTest loss: 1.794\tTest Acc: 78.725875\n",
       "==========================\n",
       "\tEpoch: 67\tTrain loss: 0.036\tTrain Acc: 98.88755\n",
-      "Epoch: 67 i : 12 and loss: 1.433 acc: 0.7734375\r"
+      "\tEpoch: 67\tTest loss: 1.753\tTest Acc: 77.835875\n",
+      "==========================\n",
+      "Epoch: 68 i : 39 and loss: 0.002 acc: 1.0921875\r"
      ]
     }
    ],
