--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1118,7 +1118,11 @@
       "count: 34\tCoord: [ 0.3 -0.9]\t\tAcc: 18.607954545454547\tLoss: 22.445\n",
       "count: 36\tCoord: [ 0.5 -0.9]\t\tAcc: 13.707386363636363\tLoss: 34.031\n",
       "count: 38\tCoord: [ 0.7 -0.9]\t\tAcc: 10.724431818181818\tLoss: 56.433\n",
-      "count: 40\tCoord: [ 0.9 -0.9]\t\tAcc: 10.014204545454545\tLoss: 106.499\n"
+      "count: 40\tCoord: [ 0.9 -0.9]\t\tAcc: 10.014204545454545\tLoss: 106.499\n",
+      "count: 42\tCoord: [-1.  -0.8]\t\tAcc: 10.866477272727273\tLoss: 90.389\n",
+      "count: 44\tCoord: [-0.8 -0.8]\t\tAcc: 11.079545454545455\tLoss: 56.871\n",
+      "count: 46\tCoord: [-0.6 -0.8]\t\tAcc: 13.778409090909092\tLoss: 33.417\n",
+      "Coord: [-0.5 -0.8]\tAcc: 24\tLoss: 24.437\r"
      ]
     }
    ],
