Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1122,7 +1122,10 @@
       "count: 42\tCoord: [-1.  -0.8]\t\tAcc: 10.866477272727273\tLoss: 90.389\n",
       "count: 44\tCoord: [-0.8 -0.8]\t\tAcc: 11.079545454545455\tLoss: 56.871\n",
       "count: 46\tCoord: [-0.6 -0.8]\t\tAcc: 13.778409090909092\tLoss: 33.417\n",
-      "Coord: [-0.5 -0.8]\tAcc: 24\tLoss: 24.437\r"
+      "count: 48\tCoord: [-0.4 -0.8]\t\tAcc: 20.738636363636363\tLoss: 19.997\n",
+      "count: 50\tCoord: [-0.2 -0.8]\t\tAcc: 29.474431818181817\tLoss: 12.958\n",
+      "count: 52\tCoord: [ 0.  -0.8]\t\tAcc: 34.01988636363637\tLoss: 10.644\n",
+      "Coord: [ 0.1 -0.8]\tAcc: 42\tLoss: 12.028\r"
      ]
     }
    ],
