Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -1232,7 +1232,15 @@
       "count: 78\tCoord: [ 0.5 -0.7]\t\tAcc: 30.75284090909091\tLoss: 10.991\n",
       "count: 80\tCoord: [ 0.7 -0.7]\t\tAcc: 19.53125\tLoss: 22.536\n",
       "count: 82\tCoord: [ 0.9 -0.7]\t\tAcc: 15.909090909090908\tLoss: 45.155\n",
-      "count: 84\tCoord: [-1.  -0.6]\t\tAcc: 15.198863636363637\tLoss: 83.985\n"
+      "count: 84\tCoord: [-1.  -0.6]\t\tAcc: 15.198863636363637\tLoss: 83.985\n",
+      "count: 86\tCoord: [-0.8 -0.6]\t\tAcc: 16.974431818181817\tLoss: 40.108\n",
+      "count: 88\tCoord: [-0.6 -0.6]\t\tAcc: 27.698863636363637\tLoss: 18.401\n",
+      "count: 90\tCoord: [-0.4 -0.6]\t\tAcc: 41.83238636363637\tLoss: 8.553\n",
+      "count: 92\tCoord: [-0.2 -0.6]\t\tAcc: 55.53977272727273\tLoss: 4.629\n",
+      "count: 94\tCoord: [ 0.  -0.6]\t\tAcc: 61.07954545454545\tLoss: 3.32\n",
+      "count: 96\tCoord: [ 0.2 -0.6]\t\tAcc: 57.59943181818182\tLoss: 3.616\n",
+      "count: 98\tCoord: [ 0.4 -0.6]\t\tAcc: 46.30681818181818\tLoss: 5.609\n",
+      "count: 100\tCoord: [ 0.6 -0.6]\t\tAcc: 30.539772727272727\tLoss: 11.076\n"
      ]
     }
    ],
