Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1125,7 +1125,10 @@
       "count: 48\tCoord: [-0.4 -0.8]\t\tAcc: 20.738636363636363\tLoss: 19.997\n",
       "count: 50\tCoord: [-0.2 -0.8]\t\tAcc: 29.474431818181817\tLoss: 12.958\n",
       "count: 52\tCoord: [ 0.  -0.8]\t\tAcc: 34.01988636363637\tLoss: 10.644\n",
-      "Coord: [ 0.1 -0.8]\tAcc: 42\tLoss: 12.028\r"
+      "count: 54\tCoord: [ 0.2 -0.8]\t\tAcc: 29.048295454545453\tLoss: 12.566\n",
+      "count: 56\tCoord: [ 0.4 -0.8]\t\tAcc: 21.306818181818183\tLoss: 18.737\n",
+      "count: 58\tCoord: [ 0.6 -0.8]\t\tAcc: 13.28125\tLoss: 30.047\n",
+      "count: 60\tCoord: [ 0.8 -0.8]\t\tAcc: 10.795454545454545\tLoss: 55.099\n"
      ]
     }
    ],
