Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1128,7 +1128,11 @@
       "count: 54\tCoord: [ 0.2 -0.8]\t\tAcc: 29.048295454545453\tLoss: 12.566\n",
       "count: 56\tCoord: [ 0.4 -0.8]\t\tAcc: 21.306818181818183\tLoss: 18.737\n",
       "count: 58\tCoord: [ 0.6 -0.8]\t\tAcc: 13.28125\tLoss: 30.047\n",
-      "count: 60\tCoord: [ 0.8 -0.8]\t\tAcc: 10.795454545454545\tLoss: 55.099\n"
+      "count: 60\tCoord: [ 0.8 -0.8]\t\tAcc: 10.795454545454545\tLoss: 55.099\n",
+      "count: 62\tCoord: [ 1.  -0.8]\t\tAcc: 9.943181818181818\tLoss: 110.53\n",
+      "count: 64\tCoord: [-0.9 -0.7]\t\tAcc: 11.292613636363637\tLoss: 56.41\n",
+      "count: 66\tCoord: [-0.7 -0.7]\t\tAcc: 14.133522727272727\tLoss: 33.388\n",
+      "Coord: [-0.6 -0.7]\tAcc: 22\tLoss: 24.029\r"
      ]
     }
    ],
