--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -651,7 +651,10 @@
       "\tEpoch: 67\tTrain loss: 0.036\tTrain Acc: 98.88755\n",
       "\tEpoch: 67\tTest loss: 1.753\tTest Acc: 77.835875\n",
       "==========================\n",
-      "Epoch: 68 i : 387 and loss: 0.007 acc: 0.9921875\r"
+      "\tEpoch: 68\tTrain loss: 0.029\tTrain Acc: 99.06655\n",
+      "\tEpoch: 68\tTest loss: 1.756\tTest Acc: 78.910625\n",
+      "==========================\n",
+      "Epoch: 69 i : 25 and loss: 0.008 acc: 0.9921875\r"
      ]
     }
    ],
