--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -1240,7 +1240,16 @@
       "count: 94\tCoord: [ 0.  -0.6]\t\tAcc: 61.07954545454545\tLoss: 3.32\n",
       "count: 96\tCoord: [ 0.2 -0.6]\t\tAcc: 57.59943181818182\tLoss: 3.616\n",
       "count: 98\tCoord: [ 0.4 -0.6]\t\tAcc: 46.30681818181818\tLoss: 5.609\n",
-      "count: 100\tCoord: [ 0.6 -0.6]\t\tAcc: 30.539772727272727\tLoss: 11.076\n"
+      "count: 100\tCoord: [ 0.6 -0.6]\t\tAcc: 30.539772727272727\tLoss: 11.076\n",
+      "count: 102\tCoord: [ 0.8 -0.6]\t\tAcc: 18.821022727272727\tLoss: 23.721\n",
+      "count: 104\tCoord: [ 1.  -0.6]\t\tAcc: 15.340909090909092\tLoss: 48.114\n",
+      "count: 106\tCoord: [-0.9 -0.5]\t\tAcc: 16.761363636363637\tLoss: 43.337\n",
+      "count: 108\tCoord: [-0.7 -0.5]\t\tAcc: 26.420454545454547\tLoss: 19.019\n",
+      "count: 110\tCoord: [-0.5 -0.5]\t\tAcc: 44.46022727272727\tLoss: 7.974\n",
+      "count: 112\tCoord: [-0.3 -0.5]\t\tAcc: 62.14488636363637\tLoss: 3.758\n",
+      "count: 114\tCoord: [-0.1 -0.5]\t\tAcc: 71.73295454545455\tLoss: 2.212\n",
+      "count: 116\tCoord: [ 0.1 -0.5]\t\tAcc: 71.44886363636364\tLoss: 1.987\n",
+      "Coord: [ 0.2 -0.5]\tAcc: 92\tLoss: 1.389\r"
      ]
     }
    ],
