--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1132,7 +1132,10 @@
       "count: 62\tCoord: [ 1.  -0.8]\t\tAcc: 9.943181818181818\tLoss: 110.53\n",
       "count: 64\tCoord: [-0.9 -0.7]\t\tAcc: 11.292613636363637\tLoss: 56.41\n",
       "count: 66\tCoord: [-0.7 -0.7]\t\tAcc: 14.133522727272727\tLoss: 33.388\n",
-      "Coord: [-0.6 -0.7]\tAcc: 22\tLoss: 24.029\r"
+      "count: 68\tCoord: [-0.5 -0.7]\t\tAcc: 23.224431818181817\tLoss: 17.87\n",
+      "count: 70\tCoord: [-0.3 -0.7]\t\tAcc: 34.09090909090909\tLoss: 10.714\n",
+      "count: 72\tCoord: [-0.1 -0.7]\t\tAcc: 42.68465909090909\tLoss: 7.466\n",
+      "Coord: [ 0.  -0.7]\tAcc: 53\tLoss: 7.773\r"
      ]
     }
    ],
