Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1135,7 +1135,10 @@
       "count: 68\tCoord: [-0.5 -0.7]\t\tAcc: 23.224431818181817\tLoss: 17.87\n",
       "count: 70\tCoord: [-0.3 -0.7]\t\tAcc: 34.09090909090909\tLoss: 10.714\n",
       "count: 72\tCoord: [-0.1 -0.7]\t\tAcc: 42.68465909090909\tLoss: 7.466\n",
-      "Coord: [ 0.  -0.7]\tAcc: 53\tLoss: 7.773\r"
+      "count: 74\tCoord: [ 0.1 -0.7]\t\tAcc: 40.625\tLoss: 7.701\n",
+      "count: 76\tCoord: [ 0.3 -0.7]\t\tAcc: 31.960227272727273\tLoss: 10.748\n",
+      "count: 78\tCoord: [ 0.5 -0.7]\t\tAcc: 21.803977272727273\tLoss: 16.986\n",
+      "count: 80\tCoord: [ 0.7 -0.7]\t\tAcc: 13.423295454545455\tLoss: 29.637\n"
      ]
     }
    ],
