Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -1249,7 +1249,15 @@
       "count: 112\tCoord: [-0.3 -0.5]\t\tAcc: 62.14488636363637\tLoss: 3.758\n",
       "count: 114\tCoord: [-0.1 -0.5]\t\tAcc: 71.73295454545455\tLoss: 2.212\n",
       "count: 116\tCoord: [ 0.1 -0.5]\t\tAcc: 71.44886363636364\tLoss: 1.987\n",
-      "Coord: [ 0.2 -0.5]\tAcc: 92\tLoss: 1.389\r"
+      "count: 118\tCoord: [ 0.3 -0.5]\t\tAcc: 61.00852272727273\tLoss: 2.912\n",
+      "count: 120\tCoord: [ 0.5 -0.5]\t\tAcc: 46.02272727272727\tLoss: 5.444\n",
+      "count: 122\tCoord: [ 0.7 -0.5]\t\tAcc: 26.491477272727273\tLoss: 12.221\n",
+      "count: 124\tCoord: [ 0.9 -0.5]\t\tAcc: 17.258522727272727\tLoss: 27.322\n",
+      "count: 126\tCoord: [-1.  -0.4]\t\tAcc: 17.045454545454547\tLoss: 49.194\n",
+      "count: 128\tCoord: [-0.8 -0.4]\t\tAcc: 24.50284090909091\tLoss: 21.806\n",
+      "count: 130\tCoord: [-0.6 -0.4]\t\tAcc: 42.89772727272727\tLoss: 8.493\n",
+      "count: 132\tCoord: [-0.4 -0.4]\t\tAcc: 63.84943181818182\tLoss: 3.477\n",
+      "Coord: [-0.3 -0.4]\tAcc: 97\tLoss: 2.264\r"
      ]
     }
    ],
