--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1138,7 +1138,11 @@
       "count: 74\tCoord: [ 0.1 -0.7]\t\tAcc: 40.625\tLoss: 7.701\n",
       "count: 76\tCoord: [ 0.3 -0.7]\t\tAcc: 31.960227272727273\tLoss: 10.748\n",
       "count: 78\tCoord: [ 0.5 -0.7]\t\tAcc: 21.803977272727273\tLoss: 16.986\n",
-      "count: 80\tCoord: [ 0.7 -0.7]\t\tAcc: 13.423295454545455\tLoss: 29.637\n"
+      "count: 80\tCoord: [ 0.7 -0.7]\t\tAcc: 13.423295454545455\tLoss: 29.637\n",
+      "count: 82\tCoord: [ 0.9 -0.7]\t\tAcc: 10.369318181818182\tLoss: 57.473\n",
+      "count: 84\tCoord: [-1.  -0.6]\t\tAcc: 11.576704545454545\tLoss: 57.752\n",
+      "count: 86\tCoord: [-0.8 -0.6]\t\tAcc: 14.133522727272727\tLoss: 32.005\n",
+      "Coord: [-0.7 -0.6]\tAcc: 24\tLoss: 23.852\r"
      ]
     }
    ],
