Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1142,7 +1142,10 @@
       "count: 82\tCoord: [ 0.9 -0.7]\t\tAcc: 10.369318181818182\tLoss: 57.473\n",
       "count: 84\tCoord: [-1.  -0.6]\t\tAcc: 11.576704545454545\tLoss: 57.752\n",
       "count: 86\tCoord: [-0.8 -0.6]\t\tAcc: 14.133522727272727\tLoss: 32.005\n",
-      "Coord: [-0.7 -0.6]\tAcc: 24\tLoss: 23.852\r"
+      "count: 88\tCoord: [-0.6 -0.6]\t\tAcc: 24.786931818181817\tLoss: 17.227\n",
+      "count: 90\tCoord: [-0.4 -0.6]\t\tAcc: 38.84943181818182\tLoss: 9.013\n",
+      "count: 92\tCoord: [-0.2 -0.6]\t\tAcc: 51.27840909090909\tLoss: 5.698\n",
+      "Coord: [-0.1 -0.6]\tAcc: 63\tLoss: 5.255\r"
      ]
     }
    ],
