--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -654,7 +654,10 @@
       "\tEpoch: 68\tTrain loss: 0.029\tTrain Acc: 99.06655\n",
       "\tEpoch: 68\tTest loss: 1.756\tTest Acc: 78.910625\n",
       "==========================\n",
-      "Epoch: 69 i : 369 and loss: 0.013 acc: 0.9921875\r"
+      "\tEpoch: 69\tTrain loss: 0.03\tTrain Acc: 99.034875\n",
+      "\tEpoch: 69\tTest loss: 1.759\tTest Acc: 78.945255\n",
+      "==========================\n",
+      "Epoch: 70 i : 5 and loss: 0.054 acc: 0.9765625\r"
      ]
     }
    ],
