Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1145,7 +1145,10 @@
       "count: 88\tCoord: [-0.6 -0.6]\t\tAcc: 24.786931818181817\tLoss: 17.227\n",
       "count: 90\tCoord: [-0.4 -0.6]\t\tAcc: 38.84943181818182\tLoss: 9.013\n",
       "count: 92\tCoord: [-0.2 -0.6]\t\tAcc: 51.27840909090909\tLoss: 5.698\n",
-      "Coord: [-0.1 -0.6]\tAcc: 63\tLoss: 5.255\r"
+      "count: 94\tCoord: [ 0.  -0.6]\t\tAcc: 53.76420454545455\tLoss: 4.882\n",
+      "count: 96\tCoord: [ 0.2 -0.6]\t\tAcc: 44.88636363636363\tLoss: 6.306\n",
+      "count: 98\tCoord: [ 0.4 -0.6]\t\tAcc: 32.31534090909091\tLoss: 10.185\n",
+      "Coord: [ 0.6 -0.6]\tAcc: 28\tLoss: 16.645\r"
      ]
     }
    ],
