--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -1257,7 +1257,14 @@
       "count: 128\tCoord: [-0.8 -0.4]\t\tAcc: 24.50284090909091\tLoss: 21.806\n",
       "count: 130\tCoord: [-0.6 -0.4]\t\tAcc: 42.89772727272727\tLoss: 8.493\n",
       "count: 132\tCoord: [-0.4 -0.4]\t\tAcc: 63.84943181818182\tLoss: 3.477\n",
-      "Coord: [-0.3 -0.4]\tAcc: 97\tLoss: 2.264\r"
+      "count: 134\tCoord: [-0.2 -0.4]\t\tAcc: 77.0596590909091\tLoss: 1.609\n",
+      "count: 136\tCoord: [ 0.  -0.4]\t\tAcc: 83.3096590909091\tLoss: 1.044\n",
+      "count: 138\tCoord: [ 0.2 -0.4]\t\tAcc: 77.27272727272727\tLoss: 1.375\n",
+      "count: 140\tCoord: [ 0.4 -0.4]\t\tAcc: 62.57102272727273\tLoss: 2.722\n",
+      "count: 142\tCoord: [ 0.6 -0.4]\t\tAcc: 43.25284090909091\tLoss: 5.96\n",
+      "count: 144\tCoord: [ 0.8 -0.4]\t\tAcc: 23.863636363636363\tLoss: 14.799\n",
+      "count: 146\tCoord: [ 1.  -0.4]\t\tAcc: 16.619318181818183\tLoss: 33.752\n",
+      "count: 148\tCoord: [-0.9 -0.3]\t\tAcc: 22.869318181818183\tLoss: 26.659\n"
      ]
     }
    ],
