Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1148,7 +1148,10 @@
       "count: 94\tCoord: [ 0.  -0.6]\t\tAcc: 53.76420454545455\tLoss: 4.882\n",
       "count: 96\tCoord: [ 0.2 -0.6]\t\tAcc: 44.88636363636363\tLoss: 6.306\n",
       "count: 98\tCoord: [ 0.4 -0.6]\t\tAcc: 32.31534090909091\tLoss: 10.185\n",
-      "Coord: [ 0.6 -0.6]\tAcc: 28\tLoss: 16.645\r"
+      "count: 100\tCoord: [ 0.6 -0.6]\t\tAcc: 20.3125\tLoss: 16.639\n",
+      "count: 102\tCoord: [ 0.8 -0.6]\t\tAcc: 12.571022727272727\tLoss: 31.351\n",
+      "count: 104\tCoord: [ 1.  -0.6]\t\tAcc: 10.440340909090908\tLoss: 64.486\n",
+      "count: 106\tCoord: [-0.9 -0.5]\t\tAcc: 13.920454545454545\tLoss: 32.247\n"
      ]
     }
    ],
