Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1151,7 +1151,10 @@
       "count: 100\tCoord: [ 0.6 -0.6]\t\tAcc: 20.3125\tLoss: 16.639\n",
       "count: 102\tCoord: [ 0.8 -0.6]\t\tAcc: 12.571022727272727\tLoss: 31.351\n",
       "count: 104\tCoord: [ 1.  -0.6]\t\tAcc: 10.440340909090908\tLoss: 64.486\n",
-      "count: 106\tCoord: [-0.9 -0.5]\t\tAcc: 13.920454545454545\tLoss: 32.247\n"
+      "count: 106\tCoord: [-0.9 -0.5]\t\tAcc: 13.920454545454545\tLoss: 32.247\n",
+      "count: 108\tCoord: [-0.7 -0.5]\t\tAcc: 24.147727272727273\tLoss: 16.06\n",
+      "count: 110\tCoord: [-0.5 -0.5]\t\tAcc: 41.97443181818182\tLoss: 8.063\n",
+      "count: 112\tCoord: [-0.3 -0.5]\t\tAcc: 56.67613636363637\tLoss: 4.45\n"
      ]
     }
    ],
