Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -1264,7 +1264,15 @@
       "count: 142\tCoord: [ 0.6 -0.4]\t\tAcc: 43.25284090909091\tLoss: 5.96\n",
       "count: 144\tCoord: [ 0.8 -0.4]\t\tAcc: 23.863636363636363\tLoss: 14.799\n",
       "count: 146\tCoord: [ 1.  -0.4]\t\tAcc: 16.619318181818183\tLoss: 33.752\n",
-      "count: 148\tCoord: [-0.9 -0.3]\t\tAcc: 22.869318181818183\tLoss: 26.659\n"
+      "count: 148\tCoord: [-0.9 -0.3]\t\tAcc: 22.869318181818183\tLoss: 26.659\n",
+      "count: 150\tCoord: [-0.7 -0.3]\t\tAcc: 38.42329545454545\tLoss: 10.272\n",
+      "count: 152\tCoord: [-0.5 -0.3]\t\tAcc: 61.29261363636363\tLoss: 3.745\n",
+      "count: 154\tCoord: [-0.3 -0.3]\t\tAcc: 79.61647727272727\tLoss: 1.501\n",
+      "count: 156\tCoord: [-0.1 -0.3]\t\tAcc: 89.13352272727273\tLoss: 0.592\n",
+      "count: 158\tCoord: [ 0.1 -0.3]\t\tAcc: 90.48295454545455\tLoss: 0.529\n",
+      "count: 160\tCoord: [ 0.3 -0.3]\t\tAcc: 78.26704545454545\tLoss: 1.169\n",
+      "count: 162\tCoord: [ 0.5 -0.3]\t\tAcc: 60.22727272727273\tLoss: 2.951\n",
+      "Coord: [ 0.6 -0.3]\tAcc: 58\tLoss: 4.423\r"
      ]
     }
    ],
