--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1154,7 +1154,11 @@
       "count: 106\tCoord: [-0.9 -0.5]\t\tAcc: 13.920454545454545\tLoss: 32.247\n",
       "count: 108\tCoord: [-0.7 -0.5]\t\tAcc: 24.147727272727273\tLoss: 16.06\n",
       "count: 110\tCoord: [-0.5 -0.5]\t\tAcc: 41.97443181818182\tLoss: 8.063\n",
-      "count: 112\tCoord: [-0.3 -0.5]\t\tAcc: 56.67613636363637\tLoss: 4.45\n"
+      "count: 112\tCoord: [-0.3 -0.5]\t\tAcc: 56.67613636363637\tLoss: 4.45\n",
+      "count: 114\tCoord: [-0.1 -0.5]\t\tAcc: 64.63068181818181\tLoss: 3.032\n",
+      "count: 116\tCoord: [ 0.1 -0.5]\t\tAcc: 61.07954545454545\tLoss: 3.316\n",
+      "count: 118\tCoord: [ 0.3 -0.5]\t\tAcc: 49.36079545454545\tLoss: 5.471\n",
+      "Coord: [ 0.4 -0.5]\tAcc: 41\tLoss: 9.098\r"
      ]
     }
    ],
